fix Club/Nursery banner resizing on mobile

--- a/src/pages/Club/index.scss
+++ b/src/pages/Club/index.scss
@@ -47,6 +47,12 @@
         background-position: center;
         background-size: 150px;
         overflow: hidden;
+        &.Card {
+          margin-bottom: 24px;
+          @media (max-width: 560px) {
+            margin-bottom: 12px;
+          }
+        }
         & > div {
           height: 235px;
           margin: auto;
@@ -56,9 +62,12 @@
           background-repeat: no-repeat;
           background-position: 50%;
           background-size: cover;
+          @media (max-width: 560px) {
+            height: 25vw;
+          }
         }
       }
-      & > .Card {
+      & > .Card:not(.club-page__content-banner) {
         margin-bottom: 24px !important;
       }
     }
@@ -205,9 +214,6 @@
         background-size: cover;
       }
     }
-    & > .Card {
-      margin-bottom: 24px !important;
-    }
   }
   &__info {
     width: 300px;
@@ -218,7 +224,7 @@
     }
     &-inner {
       padding-bottom: 24px;
-      .Card:last-child{
+      .Card:last-child {
         margin-bottom: 0;
       }
     }
